--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=spring_boot_demo
 server.port=8089
 spring.data.mongodb.uri=${MONGODB_URI}
+spring.data.mongodb.database=mynotes
 spring.security.user.password=test
+logging.level.org.springframework.data.mongodb.core=DEBUG
+logging.level.org.mongodb.driver=DEBUG
