- Added JWT_KEY_ASE64 - Added HashEncoder class to hashing - Added JwtService.kt to generate access and refresh token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.data.mongodb.database=mynotes
 spring.security.user.password=test
 logging.level.org.springframework.data.mongodb.core=DEBUG
 logging.level.org.mongodb.driver=DEBUG
+jwt.secret = ${JWT_KEY_BASE64}
